# tpuff

./: .dockerignore  .gitignore  .goreleaser.yml  DOCKER.md  Dockerfile.exporter  LICENSE  Makefile  README.md  RELEASE_NOTES.md  claude.md  go.mod  go.sum  main.go  monitoring.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.agent/: TODO.md
.github/workflows/: ci.yml  release.yml
cmd/: browse.go  delete.go  edit.go  env.go  export.go  get.go  list.go  root.go  scan.go  schema.go  search.go
docker/: .dockerignore  Dockerfile  requirements.txt  server.py
grafana/: README.md
grafana/dashboards/: turbopuffer-overview.json
grafana/provisioning/: dashboards.yml  datasources.yml
internal/client/: client.go
internal/config/: config.go
internal/debug/: debug.go
internal/embeddings/: embeddings.go
internal/metadata/: metadata.go
internal/metrics/: metrics.go
internal/output/: output.go
internal/regions/: regions.go
internal/schema/: schema.go  schema_test.go
internal/tui/: document.go  documents.go  envs.go  helpers.go  model.go  namespaces.go  preview.go  schema.go  styles.go
prometheus/: README.md
prometheus/rules/: turbopuffer.yml
scripts/: release.sh
src/: client.ts  index.ts
src/commands/: delete.ts  edit.ts  export.ts  get.ts  list.ts  search.ts
src/tpuff/: __init__.py  cli.py  client.py  config.py
src/tpuff/commands/: __init__.py  delete.py  edit.py  (+7 more)
src/utils/: debug.ts  docker-embeddings.ts  embeddings.ts  metadata-fetcher.ts  metrics.ts  model-mappings.ts  regions.ts
tests/: __init__.py  test_schema.py
(+7 files in other folders)
